# static-site-generator

./: .ssgignore  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
docs/: config.toml  index.html  index.md
docs/resources/: index.html  style.css
static_site_gen/src/: generator.py
static_site_gen/tests/: config.toml  index.html  index.md  server.py
static_site_gen/tests/templates/: index.html  style.css
